29 Oct 1998
- sessions reactived
- Session/Command menu additionally with Shift/Control+RightMouse
- Function keys adjusted for Linux console emulation.
- rolled linux console font
28 Oct 1998
- tracking down licence issues
- spent far to much time on explaining them
27 Oct 1998 Mario Weilguni <mweilguni@kde.org>
- prevented TEWidget from accepting font-change-requests from 
  KDE's "Display properties"
- fixed a segfault caused by reading a non-existant directory in
  TEDemo::loadAllSchemas() and TEDemo::loadSessionCommands()
25 Oct 1998
- marking within mouse aware application now needs an extra shift
- added command configuration files /opt/kde/share/apps/konsole/*.kdelnk
24 Oct 1998
	- adjusted geometry management. Window is not resized anylonger when
  changeing font size, scrollbar, frame, menubar.
- made font & schema attributes per-session.
23 Oct 1998
- introduced color schemes /opt/kde/share/apps/konsole/*.schema
23 Oct 1998
- introduced multible sessions
21 Oct 1998
- clear sets current rendition attributes now (instead of default rendition)
- ESC[<pn>X added from Linux console-codes
- Characters sets per emulation instead of per screen.
11 Sep 1998
- tests/vttest now reads CTRL-C XON XOFF NL correctly
30 Aug 1998
- cursor symbols adjusted
- only the application screen has a history buffer
- bgnSel/endSel removed in favor of pntSel
- improved scrolling while marking
- minor warnings removed (egcs more happy now)
28 Aug 1998
- scrolling via selection drag & double click word selection added (Peter Silva)
25 Aug 1998
- proper marking added, most selection code moved to Screen. (Peter Silva)
22 Aug 1998
- minor workaround added to makefile (-lz)
- CONTRIBUTORS added
20 Aug 1998
- minor fixes related to background pixmaps
- fixed multible size change on startup
- add catch-all to bulk handling
16 Aug 1998
- added support for jpeg and png
- KFilePreviewDialog added for background pixmap selection added
  (guess i overdid it somehow)