@@ -2,7 +2,8 @@
 datadir = $(kde_datadir)/konsole
 data_DATA = BlackOnLightYellow.schema BlackOnWhite.schema \
 	Example.Schema GreenOnBlack.schema WhiteOnBlack.schema \
-	default.Schema dselect.kdelnk linux.kdelnk mc.kdelnk shell.kdelnk
+	default.Schema dselect.kdelnk linux.kdelnk mc.kdelnk shell.kdelnk \
+  syscolor.schema
 
 appsdir = $(kde_appsdir)/Utilities
 apps_DATA = konsole.kdelnk
