@@ -3,6 +3,7 @@
 - Session/Command menu additionally with Shift/Control+RightMouse
 - Function keys adjusted for Linux console emulation.
 - rolled linux console font
+- schema for system colors added (hello Peter!)
 28 Oct 1998
 - tracking down licence issues
 - spent far to much time on explaining them
